
version 1.2.1 (cvs)
	
	- building against meanwhile 0.4.1

	- support for Notes Address Book groups
	
	- quiet down error messages when the other end of a conversation
	logs off. Only display when there are still unsent messages in the
	conversation queue
	
	- added support for sending the LoginCont message when the server
	issues a LoginRedirect if the redirect connect fails

	- added a plugin option to always LoginCont and never attempt a
	redirected login
	
	- fixed a problem with moving buddies between groups that would
	cause the change not to be saved.

	- changed the active/away/busy messages dialog to only allow
	single-line messages, to prevent problems when the messages are
	saved to the storage service (and possibly loaded by another
	client, which doesn't permit multi-line messages). Custom away
	messages may still be multi-line

	- Get Info for buddies in the blist is functional
	
version 1.2.0 (2005-03-18)

        - building against meanwhile 0.4.0

	- building against gaim 1.2.0

	- associate known client type identifier with buddies and display
	in tooltip information

	- perform resolve lookup on single-buddy additions to ensure they
	really exist, and to prompt user if multiple matches exist
	
	- slightly better handling of server_alias data from loading of
	buddy list from server

	- patch #1076834 Away/available state and debug logging

	- 'psychic mode' feature, to open an IM window when someone opens
	an IM to you (before they send a message)

	- protocol action now permits setting active/away/busy messages
	
	- load and save active/away/busy messages to storage service

	- support for sending/receiving NotesBuddy HTML

	- support for receiving NotesBuddy images
	
version 1.0.2 (2004-11-09)
	
	- fix #1054818 html/xml tags in group chats
	
	- fix a really stupid bug preventing the adding of new buddies.

	- adds protocol action to set active message

version 1.0.1 (2004-10-15)

	- fix #1045727 gaim crash in mwgaim.c:mw_read_callback after